--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -19,7 +19,7 @@
                 <header>
                     <h1 class="header">Login</h1>
                 </header>
-                <form action="./cover.html">
+                <form action="./dashboard.html">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-12">
                       <input type="email" class="form-control" id="inputEmail3" required>
